crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__copy popup dismissed.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"t (2 rows)                           Solite               ? help  q back  Q quit"
"a   b                                                                           "
"  1 x                                                                           "
"  2 y                                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                   Row 1 of 2                                   "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
