crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__enter - table view.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"t (1+ row)                           Solite               ? help  q back  Q quit"
"a                          b                          c                         "
"                         1 asdf                       9.9.9                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Row 1 of 1+ ⠋                                  "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
