crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__generated column grid.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"gen (1+ row)                         Solite               ? help  q back  Q quit"
"a   b   c                                                                       "
" 21  42 x                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Row 1 of 1+ ⠋                                  "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
