crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__help overlay dismissed.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"                                     Solite                       ? help  q quit"
"                        ┌1 table───────────────────────┐                        "
"                        │›  1 t                        │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        └──────────────────────────────┘                        "
"────────────────────────────────────────────────────────────────────────────────"
"                 j/k navigate  1-9 jump  Enter open  q/Esc quit                 "
