crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__help overlay table.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"t (1+ row)                           Solite               ? help  q back  Q quit"
"a   b                                                                           "
"  1 x                                                                           "
"                                                                                "
"                                                                                "
"                    ┌ Help — Table ────────────────────────┐                    "
"                    │      h/j/k/l  navigate               │                    "
"                    │        Enter  view row               │                    "
"                    │            [  sort asc               │                    "
"                    │            ]  sort desc              │                    "
"                    │          g/G  first/last row         │                    "
"                    │          H/L  first/last column      │                    "
"                    │  PgUp/Ctrl+u  page up                │                    "
"                    │  PgDn/Ctrl+d  page down              │                    "
"                    │          y/c  copy                   │                    "
"                    │            ?  help                   │                    "
"                    │        q/Esc  back                   │                    "
"                    │            Q  quit                   │                    "
"                    │ press ? or Esc to close              │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                 Row 1 of 1+ ⠋                                  "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
